[package]
name = "vtubestudio-cli"
version = "0.3.2-alpha.0"
edition = "2021"
license = "MIT"
description = "CLI program for interacting with the VTube Studio API"
readme = "README.md"
keywords = ["vtubestudio", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/walfie/vtubestudio-cli"
repository = "https://github.com/walfie/vtubestudio-cli"

[[bin]]
name = "vts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.47"
directories = "4.0.1"
once_cell = "1.8.0"
parse_duration = "2.1.1"
read_color = "1.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["macros", "time"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
vtubestudio = "0.4.0"
